# XetUserBot

./: .env.example  Dockerfile  README.md  compose.yml  configure_sessions.py  main.py  pyproject.toml
app/: settings.py  telegram_client.py
app/database/: __init__.py  models.py  settings.py
app/handlers/: __init__.py  common.py  goals.py  help.py  message.py  reaction.py  reaction_for_user.py  repeats.py  routers.py  schedules.py
app/tasks/: __init__.py  tasks.py
app/utils/: chat.py  db.py  goal.py  repeat.py  schedule.py  tg.py  time.py
migrations/models/: 0_20241217212944_init.py  1_20241217214849_add_repeat_message.py  2_20241218092437_repeat_with_username.py  3_20241231211303_schedule_message.py  4_20241231213152_schedule_message_fix.py  5_20250225235002_update.py
