[tool.poetry]
name = "myuserbot"
version = "0.1.0"
description = ""
authors = ["XetPy1030 <xetpy1030@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.38.1"
tortoise-orm = {extras = ["asyncpg"], version = "^0.22.0"}
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
